changed colors again also just for testing background color

--- a/resources/style.css
+++ b/resources/style.css
@@ -7,7 +7,7 @@ body {
     position: relative;
     height: 100vh;
     /*background-image: linear-gradient(-206deg, #835EFF 0%, #FF008D 100%); */
-    background-color: #141417;
+    background-color: #e0c891;
 }
 
 canvas {
